<resources>
    <string name="app_name">Insurance Premium Calculator</string>
    <string name="age">Age</string>
    <string name="gender">Gender(male or female)</string>
    <string name="smokerOrNon">Smoker or Non-Smoker</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnReset">Reset</string>
    <string name="smoker">Smoker</string>
    <string name="nonSmoker">Non-smoker</string>
    <string name="currency">RM</string>
    <string name="totalPrice">Total Price</string>
    <string name="below17">Age Below 17</string>
    <string name="from17to25">Age Between 17 to 25</string>
    <string name="from26to30">Age Between 26 to 30</string>
    <string name="from31to40">Age Between 31 to 40</string>
    <string name="from41to55">Age Between 41 to 55</string>
    <string name="above55">Age Above 55</string>
    <string name="extraMale">Extra pay for male</string>
    <string name="extraSmoker">Extra pay for smoker</string>
</resources>
